Fixed bug #32340 (insert_before($node,NULL) does not return)